<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button_pessoa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_pessoa" 
        android:onClick="abrirPessoa"/>
    
    <Button
        android:id="@+id/button_shalom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_shalom"
        android:onClick="abrirShalom"/>
    
    <Button
        android:id="@+id/button_dicasEvangelizacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_dicasEvangelizacao"
        android:onClick="abrirDicas"/>

</LinearLayout>
