<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CadastroActivity" >

    <TextView
        android:id="@+id/text_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_nome"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="100"
        android:singleLine="true" >

        <requestFocus />

    </EditText>

    <TextView
        android:id="@+id/text_celular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_celular"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_celular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="15"
        android:inputType="phone" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="100"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/text_cidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cidade"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_cidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="100"
        android:inputType="textPostalAddress" >
    </EditText>

</LinearLayout>

